--- a/LoginFlow/app.json
+++ b/LoginFlow/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "mothership",
-    "slug": "mothership",
+    "name": "LoginFlow",
+    "slug": "LoginFlow",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
