--- a/Lomond-2022/mothership/package.json
+++ b/Lomond-2022/mothership/package.json
@@ -9,13 +9,16 @@
   },
   "dependencies": {
     "expo": "~44.0.0",
+    "expo-av": "~10.2.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-lightbox": "^0.8.1",
+    "react-native-looped-carousel": "^0.1.13",
     "react-native-paper": "^4.11.2",
-    "react-native-web": "0.17.1",
-    "expo-av": "~10.2.0"
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
