--- a/Lomond-2022/mothership/package.json
+++ b/Lomond-2022/mothership/package.json
@@ -8,15 +8,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.12",
     "expo": "~44.0.0",
     "expo-av": "~10.2.0",
+    "expo-checkbox": "~2.0.0",
     "expo-status-bar": "~1.2.0",
+    "nodemailer-react": "^1.0.2",
+    "qs": "^6.10.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react-native": "0.66.3",
+    "react-native-elements": "^3.4.2",
+    "react-native-fs": "^2.19.0",
     "react-native-lightbox": "^0.8.1",
     "react-native-looped-carousel": "^0.1.13",
     "react-native-paper": "^4.11.2",
+    "react-native-simple-radio-button": "^2.7.4",
+    "react-native-smtp-mailer": "^1.2.5",
+    "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1"
   },
