--- a/reactnativeradio-master/package.json
+++ b/reactnativeradio-master/package.json
@@ -14,8 +14,9 @@
     "@react-native-community/slider": "^3.0.3",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "expo": ">=44.0.0-0 <45.0.0",
     "react": "17.0.1",
-    "react-native": "0.64.0",
+    "react-native": "^0.67.4",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-indicators": "^0.17.0",
     "react-native-reanimated": "^2.1.0",
