--- a/reactnativeradio-master/android/app/build.gradle
+++ b/reactnativeradio-master/android/app/build.gradle
@@ -131,11 +131,11 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.reactnativeradio"
+        applicationId 'com.joshuafpt.reactnativename'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
     }
     splits {
         abi {
