--- a/reactnativeradio-master/package.json
+++ b/reactnativeradio-master/package.json
@@ -1,12 +1,11 @@
 {
   "name": "reactnativeradio",
   "version": "0.0.1",
-  "private": true,  
-  "main": "node_modules/expo/AppEntry.js",
+  "private": true,
   "scripts": {
-        "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
@@ -17,7 +16,7 @@
     "@react-navigation/stack": "^5.14.4",
     "expo": ">=44.0.0-0 <45.0.0",
     "react": "17.0.1",
-    "react-native": "^0.64.3",
+    "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-indicators": "^0.17.0",
     "react-native-reanimated": "~2.3.1",
@@ -27,7 +26,11 @@
     "react-native-system-setting": "^1.7.6",
     "react-native-track-player": "^1.2.7",
     "react-native-vector-icons": "^8.1.0",
-    "use-global-hook": "^0.2.2"
+    "use-global-hook": "^0.2.2",
+    "expo-splash-screen": "~0.14.1",
+    "expo-status-bar": "~1.2.0",
+    "react-dom": "17.0.1",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
